# spaghetti

./: .gitignore  .gitmodules  CMakeLists.txt
data/: ray.frag  ray.vert  sprite.frag  sprite.vert  tilemap.frag  tilemap.vert
include/: Lens.h  Map.h  Mirror.h  Object.h  Prism.h  Ray.h  RayTracer.h  Shader.h  Type_Declarator.h
sample/: GUI.cpp
src/: Prism.cpp  Shader.cpp  main.cpp
